<resources>
    <string name="app_name">Urbest Game</string>
    <string name="action_settings">Settings</string>
    <string name="menu_navigator">Navigator</string>
    <string name="menu_task_list">Tasks</string>
    <string name="tasks">Choose a group</string>
    <string name="default_done_tasks">0/0</string>
    <string name="all">All</string>
    <string name="header_title">Task</string>
    <string name="title_activity_qatask">QATask</string>
    <string name="save">Save</string>
    <string name="prompt">prompt icon</string>
    <string name="lock">locked</string>
    <string name="is_active">is active</string>
    <string name="header_tag">headerTag</string>
    <string name="task_abbr">taskAbbr</string>
    <string name="task_description">taskDesc</string>
    <string name="task_points">taskPoints</string>
    <string name="task_title">taskTitle</string>
    <string name="task_viewer">Tasks</string>
    <string name="menu_map">Map</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="urbest_account">pl.gda.pg.tomrumpc.urbestgame</string>
</resources>
