<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TasksList" >

    <RelativeLayout
        android:id="@+id/title_bar_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingBottom="10dp"
            android:text="@string/tasks"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tasksdone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:text="@string/default_done_tasks"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/taskGroups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tasks"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/groupAll"
                style="@style/districtTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all" />

        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_bar_tasks"
        android:divider="@null"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        >
    </ListView>

</RelativeLayout>